--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="ExternalSupportiveLibs/achartengine-1.1.0.jar" sourcepath="ExternalSupportiveLibs/achartengine-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="/home/spam/git/Iperf3ericsson/ExternalSupportiveLibs/opencsv-3.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/spam/git/Iperf3ericsson/ExternalSupportiveLibs/ftp4j-1.7.2.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
