--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -36,6 +38,10 @@
         <activity
             android:name=".IPerfPreferences"
             android:label="@string/setting_name" >
+        </activity>
+         <activity
+            android:name=".ShowIndividualTest"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".PreviousTests"
